[gd_scene load_steps=10 format=3 uid="uid://q8jp7eq2amp1"]

[ext_resource type="Script" path="res://Scenes/menus/pause.gd" id="1_xk2hr"]
[ext_resource type="FontFile" uid="uid://bfrgcrc3r2ncq" path="res://Assets/QuinqueFive.ttf" id="2_bar7b"]
[ext_resource type="PackedScene" uid="uid://bhxwtmtc6euj0" path="res://Scenes/Objects/SoundObjects/PressedButtonSound.tscn" id="2_vb1ch"]
[ext_resource type="Script" path="res://Scenes/menus/PauseSettings.gd" id="3_1qb5u"]
[ext_resource type="PackedScene" uid="uid://byjdsncifff0r" path="res://Scenes/Objects/SoundObjects/HoverButtonSound.tscn" id="3_2oo6p"]
[ext_resource type="PackedScene" uid="uid://cm3x8ol7r67aw" path="res://Scenes/Objects/SoundObjects/PauseSound.tscn" id="4_j4qhh"]
[ext_resource type="PackedScene" uid="uid://bha6i57rsb7o" path="res://Scenes/Objects/SoundObjects/UnpauseSound.tscn" id="5_t6m60"]

[sub_resource type="LabelSettings" id="LabelSettings_17q4c"]
font = ExtResource("2_bar7b")
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_0b0fp"]
font = ExtResource("2_bar7b")

[node name="MarginContainer" type="MarginContainer"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_xk2hr")

[node name="PanelContainer" type="PanelContainer" parent="."]
clip_contents = true
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
clip_contents = true
custom_minimum_size = Vector2(400, 400)
layout_mode = 2

[node name="Pause" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bar7b")
theme_override_font_sizes/font_size = 20
text = "Pause"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Resume" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bar7b")
theme_override_font_sizes/font_size = 20
text = "Resume"

[node name="Settings" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bar7b")
theme_override_font_sizes/font_size = 20
text = "Settings"

[node name="Main Menu" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bar7b")
theme_override_font_sizes/font_size = 20
text = "Main Menu
"

[node name="SettingsContainer" type="MarginContainer" parent="PanelContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("3_1qb5u")

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/SettingsContainer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/SettingsContainer/PanelContainer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/SettingsContainer/PanelContainer/MarginContainer"]
clip_contents = true
custom_minimum_size = Vector2(400, 400)
layout_mode = 2

[node name="GameTitle" type="Label" parent="PanelContainer/SettingsContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Settings"
label_settings = SubResource("LabelSettings_17q4c")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MasterVolume" type="Label" parent="PanelContainer/SettingsContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Global Volume"
label_settings = SubResource("LabelSettings_0b0fp")
vertical_alignment = 1

[node name="HSlider2" type="HSlider" parent="PanelContainer/SettingsContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(35, 50)
layout_mode = 2
max_value = 1.0
step = 0.1
tick_count = 11

[node name="Label2" type="Label" parent="PanelContainer/SettingsContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "50%"
label_settings = SubResource("LabelSettings_0b0fp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Volume" type="Label" parent="PanelContainer/SettingsContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Music Volume"
label_settings = SubResource("LabelSettings_0b0fp")
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="PanelContainer/SettingsContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(35, 50)
layout_mode = 2
max_value = 1.0
step = 0.1
tick_count = 11

[node name="Label" type="Label" parent="PanelContainer/SettingsContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "50%"
label_settings = SubResource("LabelSettings_0b0fp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SoundEffects" type="Label" parent="PanelContainer/SettingsContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Sound Effect Volume"
label_settings = SubResource("LabelSettings_0b0fp")
vertical_alignment = 1

[node name="HSlider3" type="HSlider" parent="PanelContainer/SettingsContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(35, 50)
layout_mode = 2
max_value = 1.0
step = 0.1
tick_count = 11

[node name="SoundEffectsPcnt" type="Label" parent="PanelContainer/SettingsContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "50%"
label_settings = SubResource("LabelSettings_0b0fp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="WindowSized" type="CheckButton" parent="PanelContainer/SettingsContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_direction = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bar7b")
theme_override_font_sizes/font_size = 20
text = "Window sized"

[node name="Back" type="MenuButton" parent="PanelContainer/SettingsContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bar7b")
theme_override_font_sizes/font_size = 20
text = "Go Back"

[node name="PressedButtonSound" parent="." instance=ExtResource("2_vb1ch")]
bus = &"SoundEffects"

[node name="HoverButtonSound" parent="." instance=ExtResource("3_2oo6p")]
bus = &"SoundEffects"

[node name="PauseSound" parent="." instance=ExtResource("4_j4qhh")]
bus = &"SoundEffects"

[node name="UnpauseSound" parent="." instance=ExtResource("5_t6m60")]
bus = &"SoundEffects"

[connection signal="mouse_entered" from="PanelContainer/MarginContainer/VBoxContainer/Resume" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Resume" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/VBoxContainer/Settings" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Settings" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/VBoxContainer/Main Menu" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Main Menu" to="." method="_on_button_pressed"]
